--- a/public/03-catalog-menu.html
+++ b/public/03-catalog-menu.html
@@ -243,7 +243,10 @@
 				<div class="container">
 					<div class="row">
 								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Офисные и бухгалтерские</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-1.jpg" alt=""/></span></a>
+									<h3 class="text-center">Офисные и бухгалтерские</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-1.jpg" alt=""/></span>
+									<div class="s-catalog-menu__hover-block">
+										<h3 class="text-center">Офисные и бухгалтерские</h3>
+									</div></a>
 								</div>
 								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
 									<h3 class="text-center">Взломостойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-2.jpg" alt=""/></span>
@@ -260,7 +263,10 @@
 									</div></a>
 								</div>
 								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Взломо-огнестойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-4.jpg" alt=""/></span></a>
+									<h3 class="text-center">Взломо-огнестойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-4.jpg" alt=""/></span>
+									<div class="s-catalog-menu__hover-block">
+										<h3 class="text-center">Взломо-огнестойкие</h3>
+									</div></a>
 								</div>
 								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
 									<h3 class="text-center">Мебельные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-5.jpg" alt=""/></span>
