--- a/public/05-shipping.html
+++ b/public/05-shipping.html
@@ -24,7 +24,8 @@
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
 		<link rel="stylesheet" href="css/main.min.css"/>
 	</head>
-	<body><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
+	<!-- для отступов у h1-->
+	<body class="inner-page"><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
 		<div class="main-wrapper">
 			<!-- start HEADER.header-->
 			<header class="header block-with-lazy">
@@ -252,13 +253,13 @@
 							<div class="tabs__wrap col-lg-9">
 								<div class="tabs__content active">
 									<div class="cost-time">
-										<h5>Доставляем сейф на домашний адрес или адрес офиса:</h5>
+										<p>Доставляем сейф на домашний адрес или адрес офиса:</p>
 										<ul> 
 											<li>— при покупке до 16:00 час — в этот же день (время согласоваем);</li>
 											<li>— при покупке после 16:00 час — на следующий день (время согласовываем);</li>
 											<li>— по согласованию с покупателем в любое другое удобное время.</li>
 										</ul>
-										<h3>Стоимость доставки</h3>
+										<p class="h3">Стоимость доставки</p>
 										<table>
 											<tr>
 												<td>Доставка по Магнитогорску до места назначения</td>
@@ -274,7 +275,7 @@
 											</tr>
 										</table>
 										<div class="cost-time__byer"><img class="lazy" src="#" data-src="img/svg/fire.svg" alt=""/>
-											<h5>Покупатель заранее должен предусмотреть место выгрузки, освободить подъездные пути и проходы</h5>
+											<p class="h5">Покупатель заранее должен предусмотреть место выгрузки, освободить подъездные пути и проходы</p>
 										</div>
 									</div>
 								</div>
@@ -310,7 +311,7 @@
 							</div>
 						</div>
 						<div class="col">
-							<h2>Есть вопросы  по&nbsp;доставке и&nbsp;сборке?</h2>
+							<h2>Есть вопросы <br>по&nbsp;доставке и&nbsp;сборке?</h2>
 							<h5>Напишите ваш вопрос</h5>
 							<div class="form-wrap">
 								<form>
