--- a/public/07-contacts.html
+++ b/public/07-contacts.html
@@ -264,27 +264,17 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-9">
-							<div class="messanger-block">
-								<div class="row">
-									<div class="col-md-4">
-										<div class="messanger-block__question">
-											<h4>Задавайте вопросы, мы всегда на связи</h4>
-										</div>
-									</div>
-									<div class="col-sm-4"><a class="messanger-block__item messanger-block__item--whatsapp" href="#">
-										<svg class="icon icon-whatsapp ">
-											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-										</svg><span>WhatsApp</span></a>
-									</div>
-									<div class="col-sm-4"><a class="messanger-block__item messanger-block__item--viber" href="#">
-										<svg class="icon icon-viber ">
-											<use xlink:href="img/svg/sprite.svg#viber"></use>
-										</svg><span>Viber</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
+					</div>
+					<div class="ask-questin">
+						<div class="ask-questin__question">
+							<h4>Задавайте вопросы, мы всегда на связи</h4>
+						</div><a class="ask-questin__item ask-questin__item--whatsapp" href="#">
+						<svg class="icon icon-whatsapp ">
+							<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+						</svg><span>WhatsApp</span></a><a class="ask-questin__item ask-questin__item--viber" href="#">
+						<svg class="icon icon-viber ">
+							<use xlink:href="img/svg/sprite.svg#viber"></use>
+						</svg><span>Viber</span></a>
 					</div>
 					<div class="s-contact__warehouse text-center">
 						<h2>Наш склад-магазин в Магнитогорске</h2>
