--- a/public/12-basket.html
+++ b/public/12-basket.html
@@ -245,7 +245,7 @@
 			<div class="s-prod-head s-prod-head-basket">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-4 col-md-6">
+						<div class="col-lg-4 col-md-6" id="first-mobile-order">
 							<div class="s-prod-head-images">
 								<div class="s-prod-head-images__inner">
 									<div class="s-prod-head-images__slider s-prod-head-images__slider--lg s-prod-head-images__slider--js">
@@ -263,7 +263,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6">
+						<div class="col-lg-4 col-md-6" id="third-mobile-order">
 							<h1>Сейф Aiko T-17 EL</h1>
 							<div class="s-prod-head__type">Взломостойкий
 							</div>
@@ -295,7 +295,7 @@
 												</tr>
 							</table>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4" id="second-mobile-order">
 							<div class="s-prod-head-sidebar">
 								<div class="s-prod-head-sidebar__number">
 									<button> </button>
