--- a/public/13-checkout.html
+++ b/public/13-checkout.html
@@ -243,19 +243,13 @@
 			<!-- start s-step1-->
 			<div class="s-step1" id="s-step1">
 				<div class="container">
-					<div class="order-steps row">
-						<div class="col-sm-4">
-							<h5 class="active text-center">Контактные данные</h5>
-						</div>
-						<div class="col-sm-4">
-							<h5 class="text-center">Доставка и оплата</h5>
-						</div>
-						<div class="col-sm-4">
-							<h5 class="text-center">Подтверждение заказа</h5>
-						</div>
+					<div class="order-steps row text-center">
+						<div class="col-sm-4"><a class="active" href="#">Контактные данные</a></div>
+						<div class="col-sm-4"><a href="#">Доставка и оплата</a></div>
+						<div class="col-sm-4"><a href="#">Подтверждение заказа</a></div>
 					</div>
 					<div class="data row">
-						<div class="col-md-4">
+						<div class="col-lg-4 col-md-6">
 							<h4>Введите данные получателя</h4>
 							<div class="form-wrap">
 								<form>
@@ -280,7 +274,7 @@
 								</form>
 							</div>
 						</div>
-						<div class="col-md-8 col-xl-5">
+						<div class="col-md-6 col-lg-8 col-xl-5">
 							<div class="data__inform"><img class="lazy" src="#" data-src="img/svg/info.svg" alt=""/>
 								<p>Ваши данные нужны только для оформления заказа. Мы&nbsp;не&nbsp;передаем их&nbsp;третьим лицам и&nbsp;не&nbsp;рассылаем спам.</p>
 							</div>
