--- a/public/14-step-2.html
+++ b/public/14-step-2.html
@@ -245,15 +245,9 @@
 			<div class="s-step2" id="s-step2">
 				<div class="container">
 					<div class="order-steps row text-center">
-						<div class="col-sm-4">
-							<h5>Контактные данные</h5>
-						</div>
-						<div class="col-sm-4">
-							<h5 class="active">Доставка и оплата</h5>
-						</div>
-						<div class="col-sm-4">
-							<h5>Подтверждение заказа</h5>
-						</div>
+						<div class="col-sm-4"><a href="#">Контактные данные</a></div>
+						<div class="col-sm-4"><a class="active" href="#">Доставка и оплата</a></div>
+						<div class="col-sm-4"><a href="#">Подтверждение заказа</a></div>
 					</div>
 					<div class="delivery-method row justify-content-around">
 						<div class="col-md-7">
