--- a/public/15-step-3.html
+++ b/public/15-step-3.html
@@ -244,25 +244,19 @@
 			<!-- start s-step3-->
 			<div class="s-step3" id="s-step3">
 				<div class="container">
-					<div class="order-steps row">
-						<div class="col-sm-4">
-							<h5 class="active text-center">Контактные данные</h5>
-						</div>
-						<div class="col-sm-4">
-							<h5 class="text-center">Доставка и оплата</h5>
-						</div>
-						<div class="col-sm-4">
-							<h5 class="text-center">Подтверждение заказа</h5>
-						</div>
+					<div class="order-steps row text-center">
+						<div class="col-sm-4"><a href="#">Контактные данные</a></div>
+						<div class="col-sm-4"><a href="#">Доставка и оплата</a></div>
+						<div class="col-sm-4"><a class="active" href="#">Подтверждение заказа</a></div>
 					</div>
 					<div class="row">
-						<div class="final-data col-lg-4">
+						<div class="final-data col-lg-4" id="mobile-order-2">
 							<div class="final-data__info-item">
 								<div class="h4">Контактная информация</div>
 								<p>Имя:<span>Анна</span></p>
 								<p>Фамилия:<span>Соколова</span></p>
-								<p>Телефон:<span>+ 7 911 111-11-11</span></p>
-								<p>Email:<span>hello@mail.ru</span></p><a href="#">Изменить</a>
+								<p>Телефон: <a href="tel:+7(911)111-11-11"><span>+ 7 911 111-11-11</span></a></p>
+								<p>Email:<a href="mailto:hello@mail.ru"><span>hello@mail.ru</span></a></p><a href="#">Изменить</a>
 							</div>
 							<div class="final-data__info-item">
 								<div class="h4">Доставка</div>
@@ -274,23 +268,18 @@
 								<p><span>Банковской картой</span></p><a href="#">Изменить</a>
 							</div>
 						</div>
-						<div class="final-order col-lg-8">
+						<div class="final-order col-lg-8" id="mobile-order-1">
 							<div class="you-order">
-								<div class="h4">Заказ</div><a href="">Изменить</a>
+								<div class="h4">Заказ</div><a href="#">Изменить</a>
 							</div>
 							<div class="final-order__order-item row">
 								<div class="img-wrap col-sm-3"><img class="lazy" src="#" data-src="img/@2x/prod-1.jpg" alt=""/></div>
 								<div class="final-order__order-description col-sm-9">
 									<table>
 										<tr>
-											<td class="safe-name">Сейф Aiko T-17 EL</td>
+											<td class="safe-name">Сейф Aiko T-17 EL<span class="protection-class">Взломостойкий</span></td>
 											<td>1 шт.</td>
 											<td>2 000 Р</td>
-										</tr>
-										<tr>
-											<td class="protection-class">Взломостойкий</td>
-											<td></td>
-											<td></td>
 										</tr>
 									</table>
 								</div>
