--- a/public/18-search-1.html
+++ b/public/18-search-1.html
@@ -229,8 +229,252 @@
 					</div>
 				</div>
 			</div>
-			<div class="section container">
-				<h4>По&nbsp;вашему запросу &laquo;взломастойкие&raquo; ничего на&nbsp;найдено. Попробуйте еще раз.</h4>
+			<div class="main-container container">
+				<div class="row">
+					<div class="col-xl-3 col-lg-4">
+						<button class="s-filter__btn s-filter__btn--js btn btn-block btn-primary d-lg-none mb-3 ttu" type="button"><strong class="d-none">Свернуть фильтр</strong><strong>Фильтр товаров  </strong></button>
+						<div class="s-filter-wrap d-lg-block">
+							<!-- start s-filter-->
+							<div class="s-filter"> 
+								<div class="s-filter__head h6 strong">Выберите сейф  по&nbsp;параметрам
+								</div>
+								<div class="s-filter__group">
+									<div class="s-filter__title showhide active">Цена
+									</div>
+									<div class="showhide-all">
+										<div class="range-wrap price_slider_amount">
+											<div class="row">
+												<label class="col-auto"> <input class="range-result range-result--minus minus form-control" type="text"/>
+												</label>
+												<label class="col-auto"> <input class="range-result range-result--plus plus form-control" type="text"/>
+												</label>
+											</div>
+											<input class="range-slider slider-js" type="text" data-min="1000" data-max="90000"/>
+										</div>
+									</div>
+								</div>
+								<!-- +e.group-->
+								<div class="s-filter__group">
+									<div class="s-filter__title showhide active">Тип замка
+									</div>
+									<div class="showhide-all">
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">Ключевой</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">Кодовый электронный</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">Кодовый механический</span>
+											</label>
+									</div>
+								</div>
+								<!-- +e.group-->
+								<div class="s-filter__group">
+									<div class="s-filter__title showhide active">Тип замка
+									</div>
+									<div class="showhide-all">
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">0 класс</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">1 класс</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">2 класс</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">3 класс</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">4 класс</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">5 класс</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">H0 класс</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">S1 класс</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">S2 класс</span>
+											</label>
+									</div>
+								</div>
+								<!-- +e.group-->
+								<div class="s-filter__group">
+									<div class="s-filter__title showhide active">Огнестойкость
+									</div>
+									<div class="showhide-all">
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">30 Б</span>
+											</label>
+											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">60 Б</span>
+											</label>
+									</div>
+								</div>
+								<!-- +e.group-->
+							</div>
+							<div class="sidebar-list">
+								<ul>
+									<li><img class="res-i" src="img/svg/shipped.svg" alt=""/>Доставка по&nbsp;Магнитогорску <strong>в&nbsp;день заказа</strong></li>
+									<li><img class="res-i" src="img/svg/guarantee.svg" alt=""/>Гарантия на&nbsp;сейф  <strong>5&nbsp;лет</strong>, на&nbsp;замки  <strong>1&nbsp;год</strong></li>
+								</ul>
+							</div>
+						</div>
+						<!-- end s-filter-->
+					</div>
+					<div class="col-xl-9 col-lg-8">
+						<!-- start s-catalog-->
+						<div class="s-catalog s-catalog--page"> 
+							<h1>Взломостойкие сейфы</h1>
+							<div class="sort-catalog"> 
+								<div class="row"> 
+									<div class="col-auto">Сортировать:    </div>
+									<div class="col-auto"> 
+										<label class="sort-input"><input class="sort-input__input" type="radio" name="sort"/><span class="sort-input__text">сначала дешевые    </span>
+										</label>
+									</div>
+									<div class="col-auto"> 
+										<label class="sort-input"><input class="sort-input__input" type="radio" name="sort"/><span class="sort-input__text">сначала дорогие</span>
+										</label>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="s-catalog__col col-sm-6">
+									<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+										<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+										</div>
+										<table>
+											<tr>
+												<td>Цена:</td>
+												<td>2000 Р*</td>
+											</tr>
+											<tr>
+												<td>Взломостойкость:</td>
+												<td>H0 класс</td>
+											</tr>
+											<tr>
+												<td>Тип замка:</td>
+												<td>электронный</td>
+											</tr>
+											<tr>
+												<td>Внешние размеры: (ВхШхГ)</td>
+												<td>170х260х252</td>
+											</tr>
+										</table><a class="item-prod__btn" href="#">
+										<svg class="icon icon-cart ">
+											<use xlink:href="img/svg/sprite.svg#cart"></use>
+										</svg>В корзину</a>
+									</div>
+								</div>
+								<div class="s-catalog__col col-sm-6">
+									<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+										<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+										</div>
+										<table>
+											<tr>
+												<td>Цена:</td>
+												<td>2000 Р*</td>
+											</tr>
+											<tr>
+												<td>Взломостойкость:</td>
+												<td>H0 класс</td>
+											</tr>
+											<tr>
+												<td>Тип замка:</td>
+												<td>электронный</td>
+											</tr>
+											<tr>
+												<td>Внешние размеры: (ВхШхГ)</td>
+												<td>170х260х252</td>
+											</tr>
+										</table><a class="item-prod__btn" href="#">
+										<svg class="icon icon-cart ">
+											<use xlink:href="img/svg/sprite.svg#cart"></use>
+										</svg>В корзину</a>
+									</div>
+								</div>
+								<div class="s-catalog__col col-sm-6">
+									<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+										<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+										</div>
+										<table>
+											<tr>
+												<td>Цена:</td>
+												<td>2000 Р*</td>
+											</tr>
+											<tr>
+												<td>Взломостойкость:</td>
+												<td>H0 класс</td>
+											</tr>
+											<tr>
+												<td>Тип замка:</td>
+												<td>электронный</td>
+											</tr>
+											<tr>
+												<td>Внешние размеры: (ВхШхГ)</td>
+												<td>170х260х252</td>
+											</tr>
+										</table><a class="item-prod__btn" href="#">
+										<svg class="icon icon-cart ">
+											<use xlink:href="img/svg/sprite.svg#cart"></use>
+										</svg>В корзину</a>
+									</div>
+								</div>
+								<div class="s-catalog__col col-sm-6">
+									<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+										<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+										</div>
+										<table>
+											<tr>
+												<td>Цена:</td>
+												<td>2000 Р*</td>
+											</tr>
+											<tr>
+												<td>Взломостойкость:</td>
+												<td>H0 класс</td>
+											</tr>
+											<tr>
+												<td>Тип замка:</td>
+												<td>электронный</td>
+											</tr>
+											<tr>
+												<td>Внешние размеры: (ВхШхГ)</td>
+												<td>170х260х252</td>
+											</tr>
+										</table><a class="item-prod__btn" href="#">
+										<svg class="icon icon-cart ">
+											<use xlink:href="img/svg/sprite.svg#cart"></use>
+										</svg>В корзину</a>
+									</div>
+								</div>
+							</div>
+							<div class="s-catalog__footer">
+								<div class="s-catalog__footer-text s-catalog__footer-text---page text-center">*При оформлении заказа  уточняйте цену по&nbsp;т: <a href="tel:8(3519)22-00-22">8 (3519) 22-00-22</a>
+								</div>
+								<button class="s-catalog__btn-more" type="button">
+									<svg class="icon icon-refresh ">
+										<use xlink:href="img/svg/sprite.svg#refresh"></use>
+									</svg>Загрузить еще
+								</button>
+								<div class="pagination-wrapper">
+									<ul class="page-numbers">
+												<li><a class="page-numbers current" href="#">1  </a>
+												</li>
+												<li><a class="page-numbers" href="#">2 </a>
+												</li>
+												<li><a class="page-numbers" href="#"> 3 </a>
+												</li>
+												<li><a class="page-numbers" href="#">  4  </a>
+												</li>
+												<li><a class="page-numbers" href="#">  4 </a>
+												</li>
+												<li><a class="page-numbers" href="#">  5  </a>
+												</li>
+												<li><a class="page-numbers" href="#"> ... </a>
+												</li>
+												<li><a class="page-numbers" href="#">  10 </a>
+												</li>
+												<li><a class="page-numbers h6 mb-0" href="#">  Показать все</a>
+												</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<!-- end s-catalog-->
+					</div>
+				</div>
 				<div class="form-search d-lg-block">
 					<form>
 						<input type="text" placeholder="Поиск по названию или назначению"/>
