--- a/public/19-not-search.html
+++ b/public/19-not-search.html
@@ -252,6 +252,11 @@
 								</svg>
 							</button>
 						</form>
+						<ul>
+							<li><a href="#">взломостойкие</a></li>
+							<li><a href="#">Aiko</a></li>
+							<li><a href="#">айко</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
