--- a/public/22-thanks-qwiz.html
+++ b/public/22-thanks-qwiz.html
@@ -239,7 +239,7 @@
 					<div class="row">
 						<div class="col after-quiz"><img class="lazy check-mark" src="#" data-src="img/svg/tick.svg" alt=""/>
 							<h2><span class="name">Иван</span>, мы отправили вам подборку сейфов,<br> подходящих под выбранные параметры.</h2>
-							<p>Скидку&nbsp;10% мы&nbsp;закрепили за&nbsp;вашим номером телефона,<br> она действительна в&nbsp;течение 2-х недель.</p><img class="lazy" src="#" data-src="img/@2x/thanks-safes.jpg" alt=""/>
+							<p>Скидку&nbsp;10% мы&nbsp;закрепили за&nbsp;вашим номером телефона,<br> она действительна в&nbsp;течение 2-х недель.</p><img class="lazy res-i" src="#" data-src="img/@2x/thanks-safes.jpg" alt=""/>
 							<h5>Вы&nbsp;можете в&nbsp;любое время посмотреть сейфы на&nbsp;складе: <br>оценить размеры, попробовать закрыть и&nbsp;открыть замок, задать <br> вопросы&nbsp;&mdash; позвоните и&nbsp;договоритесь о&nbsp;встрече.</h5><a href="tel:+7(3519)22-00-22">+7 (3519) 22-00-22</a>
 						</div>
 					</div>
