--- a/public/07-contacts.html
+++ b/public/07-contacts.html
@@ -245,7 +245,12 @@
 						<div class="col-md-5">
 							<div class="s-contact__connection">
 								<h4>Звоните:</h4>
-								<div class="s-contact__connection-item"><img class="lazy" src="#" data-src="img/svg/telephone.svg" alt=""/>
+								<div class="s-contact__connection-item">
+									<div class="img-wrap">
+										<svg class="icon icon-telephone ">
+											<use xlink:href="img/svg/sprite.svg#telephone"></use>
+										</svg>
+									</div>
 									<ul>
 										<li><a href="tel:+7(3519)22-00-00">+7 (3519) 22-00-22</a></li>
 										<li><a href="tel:+7(3519)42-15-11">+7 (3519) 42-15-11</a></li>
@@ -256,7 +261,13 @@
 						<div class="col-md-3">
 							<div class="s-contact__connection">
 								<h4>Пишите:</h4>
-								<div class="s-contact__connection-item"><img class="lazy" src="#" data-src="img/svg/envelope-shape.svg" alt=""/>
+								<div class="s-contact__connection-item">
+									<div class="img-wrap">
+										<svg class="icon icon-envelope-shape ">
+											<use xlink:href="img/svg/sprite.svg#envelope-shape"></use>
+										</svg>
+										<!-- img(src="img/svg/envelope-shape.svg" data-src="", alt="")-->
+									</div>
 									<ul>
 										<li><a href="mailto:abcde1135@mail.ru">abcde1135@mail.ru</a></li>
 										<li><a href="mailto:abcde1135@yandex.ru">abcde1135@yandex.ru</a></li>
