--- a/public/05-shipping.html
+++ b/public/05-shipping.html
@@ -316,7 +316,7 @@
 							<div class="form-wrap">
 								<form>
 									<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
-									<textarea></textarea>
+									<textarea class="form-control"></textarea>
 									<div class="tabs">
 										<div class="form-wrap__group">
 											<div class="form-wrap__group-title">Как вам удобно получить ответ?
