--- a/public/08-catalog.html
+++ b/public/08-catalog.html
@@ -32,14 +32,14 @@
 				<div class="top-line block-with-lazy">
 					<div class="container">
 						<div class="row"> 
-							<div class="logo col-lg-auto col"><a href="#">
+							<div class="logo col-lg-auto col-md"><a href="#">
 									<div><img src="img/@2x/logo.png" alt=""/></div>
-									<div class="d-none d-md-block">
+									<div class="logo__text">
 										<div class="logo__title">Комплексные системы
 										</div>Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
 									</div></a>
 							</div>
-							<div class="col-auto order-lg-last">
+							<div class="col-auto order-last">
 								<div class="top-line__basket">
 									<svg class="icon icon-cart ">
 										<use xlink:href="img/svg/sprite.svg#cart"></use>
@@ -72,11 +72,17 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg d-lg-flex flex-lg-column-reverse">
-								<ul>
-									<li><a href="#">взломостойкие</a></li>
-									<li><a href="#">Aiko</a></li>
-									<li><a href="#">айко</a></li>
+							<div class="col-lg d-lg-flex flex-lg-column-reverse order-lg-0 order-last">
+								<ul class="d-none d-lg-flex">
+									<li>
+										<div class="link">взломостойкие</div>
+									</li>
+									<li>
+										<div class="link">Aiko</div>
+									</li>
+									<li>
+										<div class="link">айко</div>
+									</li>
 								</ul>
 								<div class="form-search d-lg-block">
 									<form>
@@ -103,55 +109,12 @@
 										<div class="catalog-menu__toggle-text"> <span></span>Каталог
 										</div>
 									</div>
-									<div class="catalog-menu__dropdown catalog-menu__dropdown--tabs tabs">
-										<div class="tabs__caption">
-											<div class="tabs__btn active">Сейфы</div>
-											<div class="tabs__btn">Стеллажи</div>
+									<div class="catalog-menu__dropdown catalog-menu__dropdown--tabs tabss">
+										<div class="tabss__caption">
+											<div class="tabss__btn active">Сейфы</div><a class="tabss__btn link-modal" href="#modal-pdf">Стеллажи</a>
 										</div>
-										<div class="tabs__wrap">
-												<div class="tabs__content active">
-													<div class="row">
-																	<div class="col-lg-3 col-sm-6">
-																		<div class="h6 strong">Категории:</div>
-																		<ul>
-																			<li><a href="#">Офисные и бухгалтерские</a></li>
-																			<li><a href="#">Взломостойкие</a></li>
-																			<li><a href="#">Огнестойкие</a></li>
-																			<li><a href="#">Взломо-огнестойкие</a></li>
-																			<li><a href="#">Мебельные</a></li>
-																			<li><a href="#">Встраиваемые</a></li>
-																			<li><a href="#">Оружейные</a></li>
-																			<li><a href="#">Мини-сейфы для дома</a></li>
-																			<li><a href="#">Автомобильные</a></li>
-																		</ul>
-																	</div>
-																	<div class="col-lg-3 col-sm-6">
-																		<div class="h6 strong">Взломостойкость:</div>
-																		<ul>
-																			<li><a href="#">0 класс</a></li>
-																			<li><a href="#">1 класс</a></li>
-																			<li><a href="#">2 класс</a></li>
-																			<li><a href="#">3 класс</a></li>
-																		</ul>
-																	</div>
-																	<div class="col-lg-3 col-sm-6">
-																		<div class="h6 strong">Огнестойкость:</div>
-																		<ul>
-																			<li><a href="#">60Б — 60 минут</a></li>
-																			<li><a href="#">30Б — 30 минут</a></li>
-																		</ul>
-																	</div>
-																	<div class="col-lg-3 col-sm-6">
-																		<div class="h6 strong">Тип замка:</div>
-																		<ul>
-																			<li><a href="#">Ключевой</a></li>
-																			<li><a href="#">Кодовый электронный</a></li>
-																			<li><a href="#">Кодовый механический</a></li>
-																		</ul>
-																	</div>
-													</div>
-												</div>
-												<div class="tabs__content">
+										<div class="tabss__wrap">
+												<div class="tabss__content active">
 													<div class="row">
 																	<div class="col-lg-3 col-sm-6">
 																		<div class="h6 strong">Категории:</div>
@@ -200,13 +163,13 @@
 							<div class="col-md col-6">
 								<div class="catalog-menu">
 									<div class="catalog-menu__toggle d-md-none">
-										<div class="catalog-menu__toggle-text"> <span></span>Меню
+										<div class="catalog-menu__toggle-text pl-0">Меню
 										</div>
 									</div>
 									<div class="catalog-menu__dropdown catalog-menu__dropdown--menu-top">
 										<div class="menu-top">
 											<ul>
-												<li class="current-menu-item"><a class="scroll-link" href="#s-qwiz"> 
+												<li><a class="scroll-link" href="#s-qwiz"> 
 														<svg class="icon icon-safety-box ">
 															<use xlink:href="img/svg/sprite.svg#safety-box"></use>
 														</svg>Подобрать сейф</a></li>
@@ -240,7 +203,7 @@
 			<div class="main-container container">
 				<div class="row">
 					<div class="col-xl-3 col-lg-4">
-						<button class="s-filter__btn s-filter__btn--js btn btn-block btn-primary d-lg-none mb-3 ttu" type="button"><strong class="d-none">Свернуть фильтр</strong><strong>Фильтр товаров  </strong></button>
+						<button class="s-filter__btn s-filter__btn--js d-lg-none mb-3 ttu" type="button"><strong class="d-none">Свернуть фильтр</strong><strong>Фильтр товаров  </strong></button>
 						<div class="s-filter-wrap d-lg-block">
 							<!-- start s-filter-->
 							<div class="s-filter"> 
@@ -503,8 +466,8 @@
 			<div class="s-form section block-with-lazy" id="s-form">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-7 align-self-end">
-							<div class="s-form__img-wrap d-none d-lg-block"><img class="lazy res-i" src="#" data-src="img/@2x/man.png" alt=""/>
+						<div class="col-xl-7 col-lg-6 align-self-end order-lg-first order-last">
+							<div class="s-form__img-wrap"><img class="lazy res-i" src="#" data-src="img/@2x/man.png" alt=""/>
 								<div class="s-form__label">
 									<div class="s-form__label-name">Александр Сикерин
 									</div>
@@ -514,68 +477,70 @@
 							</div>
 						</div>
 						<div class="col">
-							<h2>Нужна помощь в&nbsp;подборе  сейфа?</h2>
-							<h5>Наш специалист проконсультирует  вас, ответит на&nbsp;все вопросы  и&nbsp;поможет подобрать сейф</h5>
-							<div class="form-wrap">
-								<form>
-									<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
-									<div class="tabs">
-										<div class="form-wrap__group">
-											<div class="form-wrap__group-title">Как с вами связаться?
+							<div class="s-form__head-text">
+								<h2>Нужна помощь в&nbsp;подборе  сейфа?</h2>
+								<h5>Наш специалист проконсультирует  вас, ответит на&nbsp;все вопросы  и&nbsp;поможет подобрать сейф</h5>
+								<div class="form-wrap">
+									<form>
+										<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
+										<div class="tabs">
+											<div class="form-wrap__group">
+												<div class="form-wrap__group-title">Как с вами связаться?
+												</div>
+												<div class="tabs__caption">
+													<div class="tabs__btn active">
+														<svg class="icon icon-tel ">
+															<use xlink:href="img/svg/sprite.svg#tel"></use>
+														</svg>Звонок 
+													</div>
+													<div class="tabs__btn">
+														<svg class="icon icon-viber ">
+															<use xlink:href="img/svg/sprite.svg#viber"></use>
+														</svg>Viber
+													</div>
+													<div class="tabs__btn">
+														<svg class="icon icon-whatsapp ">
+															<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+														</svg>WhatsApp
+													</div>
+												</div>
+											</div> 
+											<div class="tabs__wrap">
+												<div class="tabs__content active">
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__title">Введите телефон:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="tel" required="required"/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+												</div>
+												<div class="tabs__content">
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__title">Введите viber:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="viber"/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+												</div>
+												<div class="tabs__content">
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__title">Введите whatsapp:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="whatsapp"/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+												</div>
 											</div>
-											<div class="tabs__caption">
-												<div class="tabs__btn active">
-													<svg class="icon icon-tel ">
-														<use xlink:href="img/svg/sprite.svg#tel"></use>
-													</svg>Звонок 
-												</div>
-												<div class="tabs__btn">
-													<svg class="icon icon-viber ">
-														<use xlink:href="img/svg/sprite.svg#viber"></use>
-													</svg>Viber
-												</div>
-												<div class="tabs__btn">
-													<svg class="icon icon-whatsapp ">
-														<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-													</svg>WhatsApp
-												</div>
-											</div>
-										</div> 
-										<div class="tabs__wrap">
-											<div class="tabs__content active">
-												<div class="form-wrap__input-wrap form-group">
-													<label><span class="form-wrap__title">Введите телефон:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="tel" required="required"/>
-													</label>
-												</div>
-												<!-- +e.input-wrap-->
-											</div>
-											<div class="tabs__content">
-												<div class="form-wrap__input-wrap form-group">
-													<label><span class="form-wrap__title">Введите viber:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="viber"/>
-													</label>
-												</div>
-												<!-- +e.input-wrap-->
-											</div>
-											<div class="tabs__content">
-												<div class="form-wrap__input-wrap form-group">
-													<label><span class="form-wrap__title">Введите whatsapp:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="whatsapp"/>
-													</label>
-												</div>
-												<!-- +e.input-wrap-->
-											</div>
+											<div class="h5 text-secondar">Перезвоню в течение рабочего дня</div>
 										</div>
-										<div class="h5 text-secondar">Перезвоню в течение рабочего дня</div>
-									</div>
-									<div class="form-wrap__input-wrap form-group">
-										<label><span class="form-wrap__title">Как к вам обращаться?</span><input class="form-wrap__input form-control" type="text" placeholder="Иван" name="name" required="required"/>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-									<button class="form-wrap__btn" type="submit">Получить помощь  в&nbsp;подборе&nbsp;сейфа
-									</button>
-									<div class="form-wrap__polite text-secondary"> Нажимая на&nbsp;кнопку, вы&nbsp;даете согласие на&nbsp;обработку своих персональных данных и&nbsp;соглашаетесь с&nbsp;<a class="tdu text-secondary" href="privacy-policy.pdf" target="_blank">Политикой конфиденциальности</a>
-									</div>
-								</form>
+										<div class="form-wrap__input-wrap form-group">
+											<label><span class="form-wrap__title">Как к вам обращаться?</span><input class="form-wrap__input form-control" type="text" placeholder="Иван" name="name" required="required"/>
+											</label>
+										</div>
+										<!-- +e.input-wrap-->
+										<button class="form-wrap__btn" type="submit">Получить помощь  в&nbsp;подборе&nbsp;сейфа
+										</button>
+										<div class="form-wrap__polite text-secondary"> Нажимая на&nbsp;кнопку, вы&nbsp;даете согласие на&nbsp;обработку своих персональных данных и&nbsp;соглашаетесь с&nbsp;<a class="tdu text-secondary" href="privacy-policy.pdf" target="_blank">Политикой конфиденциальности</a>
+										</div>
+									</form>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -586,7 +551,7 @@
 					<div class="row">
 						<div class="logo col-lg-5 col"><a href="#">
 								<div><img src="img/@2x/logo.png" alt=""/></div>
-								<div class="d-none d-md-block">
+								<div class="logo__text">
 									<div class="logo__title">Комплексные системы
 									</div>Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
 								</div></a>
@@ -631,8 +596,8 @@
 						</div>
 						<div class="col-sm-auto order-sm-0 order-last">
 							<div class="develop-block">
-								<div class="develop-block__text">Создание и&nbsp;продвижение  сайта: <a href="#"> Студия &laquo;Барс&raquo;</a>
-								</div><img class="lazy res-i" src="#" data-src="img/@2x/develop.png" alt=""/>
+								<div class="develop-block__text">Создание и&nbsp;продвижение  сайта: <a href="#" target="_blank"> Студия &laquo;Барс&raquo;</a> 
+								</div><a class="develop-block__img-link" href="#" target="_blank"><img class="lazy res-i" src="#" data-src="img/@2x/develop.png" alt=""/></a>
 							</div>
 						</div>
 						<div class="col-lg-5 order-lg-first">
