--- a/public/13-checkout.html
+++ b/public/13-checkout.html
@@ -206,7 +206,7 @@
 			<!-- start s-step1-->
 			<div class="s-step1" id="s-step1">
 				<div class="container">
-					<div class="order-steps row text-center">
+					<div class="order-steps row text-center align-items-center">
 						<div class="col-sm-4"><a class="active" href="#">Контактные данные</a></div>
 						<div class="col-sm-4"><a href="#">Доставка и оплата</a></div>
 						<div class="col-sm-4"><a href="#">Подтверждение заказа</a></div>
