--- a/public/15-step-3.html
+++ b/public/15-step-3.html
@@ -207,7 +207,7 @@
 			<!-- start s-step3-->
 			<div class="s-step3" id="s-step3">
 				<div class="container">
-					<div class="order-steps row text-center">
+					<div class="order-steps row text-center align-items-center">
 						<div class="col-sm-4"><a href="#">Контактные данные</a></div>
 						<div class="col-sm-4"><a href="#">Доставка и оплата</a></div>
 						<div class="col-sm-4"><a class="active" href="#">Подтверждение заказа</a></div>
