--- a/public/05-shipping.html
+++ b/public/05-shipping.html
@@ -274,7 +274,7 @@
 							</div>
 						</div>
 						<div class="col">
-							<div class="s-form__head-text">
+							<div class="s-form__head-text corrective-margin">
 								<h2>Есть вопросы <br>по&nbsp;доставке и&nbsp;сборке?</h2>
 								<h5>Напишите ваш вопрос</h5>
 								<div class="form-wrap">
