add developer logo

--- a/public/09-prod.html
+++ b/public/09-prod.html
@@ -612,7 +612,7 @@
 						<div class="col-sm-auto order-sm-0 order-last">
 							<div class="develop-block">
 								<div class="develop-block__text">Создание и&nbsp;продвижение  сайта: <a href="#" target="_blank"> Студия &laquo;Барс&raquo;</a> 
-								</div><a class="develop-block__img-link" href="#" target="_blank"><img class="lazy res-i" src="#" data-src="img/@2x/develop.png" alt=""/></a>
+								</div><a class="develop-link" href="#" target="_blank"><span class="develop-link__panel"><img class="img-1" src="img/svg/hand.svg" alt=""/><img class="img-2" src="img/svg/logo-text.svg" alt=""/></span></a>
 							</div>
 						</div>
 						<div class="col-lg-5 order-lg-first">
