fixed textarea, letter-spacing > rem, add mt 12-basket

--- a/public/05-shipping.html
+++ b/public/05-shipping.html
@@ -280,7 +280,9 @@
 								<div class="form-wrap">
 									<form>
 										<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
-										<textarea class="form-control"></textarea>
+										<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control form-control" placeholder="" name="textarea"></textarea>
+										</div>
+										<!-- +e.input-wrap-->
 										<div class="tabs">
 											<div class="form-wrap__group">
 												<div class="form-wrap__group-title">Как вам удобно получить ответ?
