--- a/public/14-step-2.html
+++ b/public/14-step-2.html
@@ -270,9 +270,13 @@
 									</div>
 									<!-- +e.input-wrap-->
 									<h5>Введите адрес доставки</h5>
-									<textarea class="address" placeholder="г. Магнитогосрк, 50 Лет Октября пр., д.118, кв.124"></textarea>
+									<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control address" placeholder="г. Магнитогосрк, 50 Лет Октября пр., д.118, кв.124" name="textarea"></textarea>
+									</div>
+									<!-- +e.input-wrap-->
 									<h5>Напишите комментарий, если хотите</h5>
-									<textarea placeholder="Например, можно ли заказать доставку в нерабочее время"></textarea>
+									<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" placeholder="Например, можно ли заказать доставку в нерабочее время" name="textarea"></textarea>
+									</div>
+									<!-- +e.input-wrap-->
 								</form>
 							</div>
 						</div>
